// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders 1`] = `
<RNSVGSvgView
  bbWidth={20}
  focusable={false}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
    }
  }
  title="IconEmail"
  width={20}
>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
      fillRule={0}
      propList={
        Array [
          "fill",
          "fillRule",
        ]
      }
    >
      <RNSVGPath
        d="2dca68e6b455fb04a2975586f95f2052"
        fill={4290295992}
        propList={
          Array [
            "fill",
          ]
        }
      />
      <RNSVGPath
        d="d08f2857f91d1cb7ade3298227eeb176"
        fill={4294967295}
        propList={
          Array [
            "fill",
          ]
        }
      />
      <RNSVGPath
        d="59952cd14b0c0c6204892147f26f685a"
        fill={4291611852}
        propList={
          Array [
            "fill",
          ]
        }
      />
      <RNSVGPath
        d="27656d0344be367be22064a8124ce9dc"
        fill={4290953922}
        propList={
          Array [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. iconfacebook renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-facebook"
  bbHeight={15}
  bbWidth={20}
  focusable={false}
  height={15}
  meetOrSlice={0}
  minX={14}
  minY={10}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  title="IconFacebook"
  vbHeight={20.397258758544922}
  vbWidth={10.592460632324219}
  width={20}
>
  <RNSVGGroup>
    <RNSVGGroup
      fill={4280098075}
      fillRule={1}
      propList={
        Array [
          "fill",
          "fillRule",
        ]
      }
    >
      <RNSVGPath
        d="ff2ae287381fd0583b3a4df9bc45c5be"
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. iconforwardarrow renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-forward-arrow"
  bbHeight={15}
  bbWidth={20}
  focusable={false}
  height={15}
  meetOrSlice={0}
  minX={42}
  minY={12}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  vbHeight={120}
  vbWidth={60}
  width={20}
>
  <RNSVGGroup>
    <RNSVGGroup
      fill={4278216345}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="cf23b8f47ac97eeec14ee4c65e472078"
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. iconstar renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-save-star"
  bbWidth={20}
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
    }
  }
  title="IconStar"
  vbHeight={18}
  vbWidth={18}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="20db890d0ec5651ed550568cd37b5875"
      fill={4278216345}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconcopylink renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-copy-link"
  bbHeight={15}
  bbWidth={20}
  focusable={false}
  height={15}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  title="IconCopyLink"
  vbHeight={15}
  vbWidth={15}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="9caedb2f218a37cd4660f2ab42e9b771"
      fill={4285098345}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`6. iconsavebookmark renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-save-bookmark"
  bbHeight={16}
  bbWidth={20}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 16,
      "width": 20,
    }
  }
  title="IconSaveBookmark"
  vbHeight={16}
  vbWidth={12}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="25ee7ee33953337725fa0c3787ab3241"
      fill={4285098345}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`7. icontwitter renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-twitter"
  bbHeight={15}
  bbWidth={20}
  focusable={false}
  height={15}
  meetOrSlice={0}
  minX={-354.2}
  minY={-279.4}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  title="IconTwitter"
  vbHeight={600}
  vbWidth={750}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="0407fd6a3edc199eb6063d0ebd2c66ad"
      fill={4278216345}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`8. iconvideo renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-video"
  bbHeight={15}
  bbWidth={20}
  focusable={false}
  height={15}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  title="IconVideo"
  vbHeight={40}
  vbWidth={68}
  width={20}
>
  <RNSVGGroup>
    <RNSVGRect
      fill={4280098075}
      height="40"
      propList={
        Array [
          "fill",
        ]
      }
      width="50"
      x="0"
      y="0"
    />
    <RNSVGPath
      d="171e0421ab3c212b8bbf45e8c85e924b"
      fill={4280098075}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`9. iconvideo360player renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-video-360-player"
  bbHeight={15}
  bbWidth={20}
  focusable={false}
  height={15}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  title="IconVideo360Player"
  vbHeight={100}
  vbWidth={108}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="92444cc628d352fe07031cfb7b426ccf"
      fill={4278216345}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`10. thestlogo renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="logo-the-sunday-times"
  bbWidth={20}
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
    }
  }
  title="TheSTLogo"
  vbHeight={20}
  vbWidth={29}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="0f4e958f2b4ff0e7612914c8ca56d8f6"
      fill={4294967295}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`11. thetimeslogo renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="logo-the-times"
  bbWidth={20}
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
    }
  }
  title="TheTimesLogo"
  vbHeight={20}
  vbWidth={20}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="9d34e249e9f10c48ae181fd7ef01d8e7"
      fill={4294967295}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`12. closeicon renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-close"
  bbHeight={28}
  bbWidth={20}
  focusable={false}
  height={28}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 28,
      "width": 20,
    }
  }
  title="Close Icon"
  vbHeight={28}
  vbWidth={28}
  width={20}
>
  <RNSVGGroup>
    <RNSVGPath
      d="e47f4fab4bd751d2d3ea1eb7a66c492a"
      fill={4294967295}
      propList={
        Array [
          "fill",
          "stroke",
        ]
      }
      stroke={4294967295}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
